2001-05-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-default-connection.c, gda-default-command.c: better
	error handling
	* sqlite/NO-AUTO-GEN: added this file to avoid the execution of
	auto* in this directory (fixed by mvali@hot.ee and
	Jon.Hellan@clustra.com)

2001-04-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* implemented first working version of the GDA default
	provider
	* imported libsqlite (http://www.hwaci.com/sw/sqlite/) into
	our source tree, until it is oficially released

2001-04-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* started gda-default-server, which will be a server *always*
	installed with libgda, so that users don't have to worry about
	setting up a RDBMS to use GNOME-DB/libgda