@@ -1,3 +1,8 @@
+2001-05-05  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gda-default-connection.c (schema_tables): implemented, although
+	only returning the tables' name
+
 2001-05-04  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gda-default-connection.c, gda-default-command.c: better
